--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,15 @@
-name: First Node CICD
 
-
+name: My First WorkFlow
 
 on:
   push:
-   branches: [ main ]
+    branches: [ main ]
 
 
-jobs:
-  demo:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Greetings
-      - run: echo "cicd success"
+ jobs:
+   demo:
+     runs-on: ubuntu-latest
+     steps:
+       - name: Greetings
+       - run: echo "cicd success"
   
