--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,28 @@
+# name: My First WorkFlow
+
+# on:
+#   push:
+#     branches: [ main ]
+
+# jobs:
+#   demo:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Greetings
+#         run: echo "Hello World!"  # Fixed: Added a command to this step
+#       - name: Check Status
+#         run: echo "cicd success"
+
 name: My First WorkFlow
 
 on:
   push:
-    branches: [ main ]
+     branches: [ main ]
+
 
 jobs:
   demo:
     runs-on: ubuntu-latest
     steps:
-      - name: Greetings
-        run: echo "Hello World!"  # Fixed: Added a command to this step
-      - name: Check Status
-        run: echo "cicd success"
+       - name: Greetings
+         run: echo "cicd success"
