--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,16 +13,52 @@
 #       - name: Check Status
 #         run: echo "cicd success"
 
-name: My First WorkFlow
+# name: My First WorkFlow
+# on:
+#   push:
+#     branches: [ main ]
+
+
+# jobs:
+#   demo:
+#     runs-on: ubuntu-latest
+#     steps:
+#        - name: Greetings
+#          run: echo "test"
+name: Node.js CI/CD
+
 on:
   push:
     branches: [ main ]
-
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  demo:
+  build-and-test:
     runs-on: ubuntu-latest
+    
     steps:
-       - name: Greetings
-         run: echo "test"
+      # 1. Pull the code into the runner
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      # 2. Set up specific Node.js version
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20' # Recommended stable version for 2026
+          cache: 'npm'       # Automatically caches dependencies for speed
+
+      # 3. Install dependencies exactly as in package-lock.json
+      - name: Install Dependencies
+        run: npm ci
+
+      # 4. Run your test suite
+      - name: Run Tests
+        run: npm test
+
+      # 5. Build project (if applicable)
+      - name: Build
+        run: npm run build --if-present
+
        
