--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,16 +13,21 @@
 #       - name: Check Status
 #         run: echo "cicd success"
 
-name: My First WorkFlow
+name: Node.js CI/CD
+
 on:
   push:
-    branches: [ main ]
-
+    branches: [main]
 
 jobs:
-  demo:
+  build:
     runs-on: ubuntu-latest
     steps:
-       - name: Greetings
-         run: echo "test"
-       
+      - uses: actions/checkout@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+      - run: npm install
+      - run: npm test
