--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,27 +15,27 @@
 
 
 
-      # 1. Pull the code into the runner
+            # 1. Pull the code into the runner
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      # 2. Set up specific Node.js version
+      # 2. Set up Node.js (Cache removed to prevent error)
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20' # Recommended stable version for 2026
-          cache: 'npm'       # Automatically caches dependencies for speed
+          node-version: '20'
 
-      # 3. Install dependencies exactly as in package-lock.json
+      # 3. Use 'npm install' instead of 'npm ci'
       - name: Install Dependencies
-        run: npm ci
+        run: npm install
 
-      # 4. Run your test suite
+      # 4. Run tests
       - name: Run Tests
         run: npm test
 
-      # 5. Build project (if applicable)
+      # 5. Build
       - name: Build
         run: npm run build --if-present
+
 
 
