--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,17 +15,30 @@
 
 
 
-            # 1. Pull the code into the runner
+name: Node.js CI
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+jobs:
+  build-and-test:
+    runs-on: ubuntu-latest
+
+    steps:
+      # 1. Pull the code into the runner
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      # 2. Set up Node.js (Cache removed to prevent error)
+      # 2. Set up Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
 
-      # 3. Use 'npm install' instead of 'npm ci'
+      # 3. Install dependencies
       - name: Install Dependencies
         run: npm install
 
@@ -33,9 +46,6 @@
       - name: Run Tests
         run: npm test
 
-      # 5. Build
+      # 5. Build project
       - name: Build
         run: npm run build --if-present
-
-
-
