--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,44 @@
 
 
 
-name: Node.js CI
+# name: Node.js CI
+
+# on:
+#   push:
+#     branches: [ "main" ]
+#   pull_request:
+#     branches: [ "main" ]
+
+# jobs:
+#   build-and-test:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       # 1. Pull the code into the runner
+#       - name: Checkout Code
+#         uses: actions/checkout@v4
+
+#       # 2. Set up Node.js
+#       - name: Setup Node.js
+#         uses: actions/setup-node@v4
+#         with:
+#           node-version: '20'
+
+#       # 3. Install dependencies
+#       - name: Install Dependencies
+#         run: npm install
+
+#       # 4. Run tests
+#       - name: Run Tests
+#         run: npm test
+
+#       # 5. Build project
+#       - name: Build
+#         run: npm run build --if-present
+
+
+
+name: Next.js CI/CD with Caching and Artifacts
 
 on:
   push:
@@ -24,28 +61,59 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      # 1. Pull the code into the runner
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      # 2. Set up Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
 
-      # 3. Install dependencies
+      # 1. Cache npm dependencies and Next.js build cache
+      - name: Cache dependencies and Next.js build
+        uses: [actions/cache@v4](https://github.com)
+        with:
+          path: |
+            ~/.npm
+            ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
+
       - name: Install Dependencies
         run: npm install
 
-      # 4. Run tests
-      - name: Run Tests
-        run: npm test
+      - name: Build Next.js
+        run: npm run build
 
-      # 5. Build project
-      - name: Build
-        run: npm run build --if-present
+      # 2. Upload the production build as an artifact
+      - name: Upload Build Artifacts
+        uses: [actions/upload-artifact@v4](https://github.com)
+        with:
+          name: nextjs-production-build
+          path: .next/
+          retention-days: 7
+
+  deploy:
+    # Only run if the build job passes
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code (Optional but recommended)
+        uses: actions/checkout@v4
+
+      # 3. Download the build artifact from the previous job
+      - name: Download Build Artifacts
+        uses: [actions/download-artifact@v4](https://github.com)
+        with:
+          name: nextjs-production-build
+          path: .next/
+
+      - name: Verify Download
+        run: ls -R .next/
+      
+      - name: Deploy Step
+        run: echo "Deploying build to production server..."
