--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,17 +50,14 @@
 #       - name: Build
 #         run: npm run build --if-present
 
-
-name: Next.js CI/CD with Caching and Artifacts
+name: Node.js CI
 
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
-  build:
+  test-and-run:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
@@ -70,48 +67,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-
-      # 1. Cache npm dependencies and Next.js build cache
-      - name: Cache dependencies and Next.js build
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.npm
-            ${{ github.workspace }}/.next/cache
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
-          restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
+          cache: 'npm'
 
       - name: Install Dependencies
         run: npm install
 
-      - name: Build Next.js
-        run: npm run build
-
-      # 2. Upload the production build as an artifact
-      - name: Upload Build Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: nextjs-production-build
-          path: .next/
-          retention-days: 7
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      # 3. Download the build artifact from the previous job
-      - name: Download Build Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: nextjs-production-build
-          path: .next/
-
-      - name: Verify Download
-        run: ls -R .next/
-      
-      - name: Deploy Step
-        run: echo "Deploying build to production server..."
+      # Only runs if you have a "test" script in package.json
+      - name: Run Tests
+        run: npm test --if-present
