--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,63 +15,37 @@
 
 
 
-# name: Node.js CI
-
-# on:
-#   push:
-#     branches: [ "main" ]
-#   pull_request:
-#     branches: [ "main" ]
-
-# jobs:
-#   build-and-test:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#       # 1. Pull the code into the runner
-#       - name: Checkout Code
-#         uses: actions/checkout@v4
-
-#       # 2. Set up Node.js
-#       - name: Setup Node.js
-#         uses: actions/setup-node@v4
-#         with:
-#           node-version: '20'
-
-#       # 3. Install dependencies
-#       - name: Install Dependencies
-#         run: npm install
-
-#       # 4. Run tests
-#       - name: Run Tests
-#         run: npm test
-
-#       # 5. Build project
-#       - name: Build
-#         run: npm run build --if-present
-
 name: Node.js CI
 
 on:
   push:
     branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-  test-and-run:
+  build-and-test:
     runs-on: ubuntu-latest
+
     steps:
+      # 1. Pull the code into the runner
       - name: Checkout Code
         uses: actions/checkout@v4
 
+      # 2. Set up Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
 
+      # 3. Install dependencies
       - name: Install Dependencies
         run: npm install
 
-      # Only runs if you have a "test" script in package.json
+      # 4. Run tests
       - name: Run Tests
-        run: npm test --if-present
+        run: npm test
+
+      # 5. Build project
+      - name: Build
+        run: npm run build --if-present
