--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,42 @@
 
 
 
+# name: Node.js CI
+
+# on:
+#   push:
+#     branches: [ "main" ]
+#   pull_request:
+#     branches: [ "main" ]
+
+# jobs:
+#   build-and-test:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       # 1. Pull the code into the runner
+#       - name: Checkout Code
+#         uses: actions/checkout@v4
+
+#       # 2. Set up Node.js
+#       - name: Setup Node.js
+#         uses: actions/setup-node@v4
+#         with:
+#           node-version: '20'
+
+#       # 3. Install dependencies
+#       - name: Install Dependencies
+#         run: npm install
+
+#       # 4. Run tests
+#       - name: Run Tests
+#         run: npm test
+
+#       # 5. Build project
+#       - name: Build
+#         run: npm run build --if-present
+
+
 name: Node.js CI
 
 on:
@@ -28,24 +64,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Pull the code into the runner
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      # 2. Set up Node.js
+      # 1. Setup Node with built-in caching for npm dependencies
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm' # This caches ~/.npm automatically
 
-      # 3. Install dependencies
       - name: Install Dependencies
         run: npm install
 
-      # 4. Run tests
       - name: Run Tests
-        run: npm test
+        run: npm test --if-present
 
-      # 5. Build project
-      - name: Build
+      - name: Build project
         run: npm run build --if-present
+
+      # 2. Upload the entire project (or a 'dist' folder if you have one)
+      - name: Upload Build Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: node-app-files
+          # Use '.' to upload everything, or 'dist/' if you compile code
+          path: . 
+          retention-days: 5
