--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,7 +72,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm' # This caches ~/.npm automatically
+          # cache: 'npm' # This caches ~/.npm automatically
 
       - name: Install Dependencies
         run: npm install
